Debut ajout de classe requete